--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14"
+    },
+    "dependencies": {
+        "laravel-echo": "^1.15.0",
+        "pusher-js": "^8.0.1",
+        "toastr": "^2.1.4"
     }
 }
